# ragAPI

./: README.md  app.py  pyproject.toml
rag/: pyproject.toml
rag/src/rag/: engine.py  server.py
src/: test_client.py
src/api/: routes.py  schemas.py
src/core/: __init__.py  config.py  engine.py  graph_logic.py
src/core/utils/: create_embeddings.py  split_text.py  vectorstore.py
