[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "flagembedding>=1.3.5",
    "langchain-core>=1.3.0",
    "langchain-deepseek>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.8",
    "mammoth>=1.12.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "portalocker>=3.2.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.26",
    "transformers<5.0.0",
    "uvicorn>=0.44.0",
]
